force-app/main/default/objects/LLC_BI__Product_Program__c/fields/LLC_BI__Feature_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Feature_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not used because the product program selector feature is not being used. Provides features that are offered by the program.</description>
    <label>Feature Template</label>
    <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
    <relationshipLabel>Product Programs (Feature Template)</relationshipLabel>
    <relationshipName>Product_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>