force-app/main/default/objects/LLC_BI__Product_Program__c/fields/LLC_BI__Qualification_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Qualification_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not used because the product program selector feature is not being used. Sets qualification metrics.</description>
    <label>Qualification Template</label>
    <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
    <relationshipLabel>Product Programs</relationshipLabel>
    <relationshipName>Product_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>